frontend/test/should_fail/index_exec_mm_min_max_node.grg
#using "index_min_max_size_model.gm"

rule ri {
	n:N -e:E-> n;
	
	modify {
	---
		exec( {{ minNodeFromIndex(bari) in nodesFromIndex(fooi) }} );
	}
}
